# dop-training

./: README.md  pyproject.toml
src/dop_game/: core_types.py  game.py  generics.py  math_helpers.py  player.py  star_system.py  state.py  validity.py
tests/: test_game.py  test_generics.py  test_system_info.py  test_system_stats.py
