[tool.poetry]
name = "dop-training"
version = "0.1.0"
description = ""
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dop_game", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
